<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#091353">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.auth.student.StudentLoginActivity"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/txtStudentLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/salsa"
            android:gravity="center"
            android:text="e-kakshya !"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStudentUsername"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:hint="username"
                android:textColor="#ffff"
                android:textSize="18sp"
                android:paddingLeft="15dp"
                android:paddingTop="18dp"
                android:inputType="text"
                android:background="@drawable/custom_form_design"

                />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStudentPassword"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:hint="Password"
                android:textColor="#ffff"
                android:textSize="18sp"
                android:background="@drawable/custom_form_design"
                android:paddingLeft="15dp"
                android:paddingTop="18dp"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnStudentLogin"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="Login"
            android:textColor="#ffff"
            android:fontFamily="@font/salsa"
            android:textSize="25sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/custom_button"
            android:layout_marginTop="20dp"
            />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Account?"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/salsa"
                android:id="@+id/txtNoAccount"
                android:textColor="#ffff"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create One"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/txtStudentCreateOne"
                android:fontFamily="@font/salsa"
                android:clickable="true"
                android:textColor="#ffff"
                android:textSize="20sp"
                />


        </LinearLayout>


    </LinearLayout>

</ScrollView>